# pavsca

./: LICENSE  README.md  run.bat  setup.cfg
data/: result.txt  rules.txt  words.txt
pavsca/: applier.py
pavsca/phonology/: tre_rule.py  utils.py  word.py
