[metadata]
name = pavsca
version = 0.0.1
author = Seiji Otsu
author_email = seijisotsu@gmail.com
description = Sound change applier for constructed languages.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seijiotsu
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True